css/style.css
.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  margin: 12px;
  /* min-width: 170px; */
  max-width: 160px;
  height: 220px;
  border: 1px solid #6b6b6b;
}

.card-body {
  display: flex;
  flex-direction: column;
  padding: 2px;
  padding-top: 8px;
  background-color: #1d1d1d;
  color: aliceblue;
  border-radius: 0px 0px 2px 2px;
}

.card-title {
  margin-bottom: 1px;
}

.card-author {
  margin-bottom: 1px!important;
  color: #e99941
}

.card-overlay {
  background-color: #000000b3;
  z-index: 2;
  position: absolute;
  min-width: 100%;
  min-height: 100%;
  border-radius: 0.25rem;
  display: none;
}

.loading-gif {
  vertical-align: middle;
  border-style: none;
  max-width: 60px;
  max-height: 60px;
  position: relative;
  margin: auto;
}

.btn-group {
  border-color: aliceblue;
  margin-left: 10px;
  margin-right: 10px;
}

.bs-tooltip {
  position: relative;
  bottom: 75px;
}

.tooltip.inner {
  background-color: black;
  opacity: 100%;
  position: relative;
  top: -100px;
}

.tooltip.show {
  opacity: 1;
}

.btn {
  background-color: #606060;
  border-color: #ffffff;
  color: white;
}

.btn-primary:focus,
.btn-primary.focus {
  box-shadow: none;
  background-color: #606060;
  border-color: #ffffff;
}

.btn-primary:hover {
  background-color: #2a2a2a;
}


.button-load {
  float: bottom;
  margin: 10px;
  margin-top: auto;
  background-color: #606060;
  border-color: #ffffff;
}

.my-cont {
  max-width: 2000px;
  margin-top: 55px;
}

.row {
  margin-left: 5px;
  margin-right: auto;
}

.btn-cont {
  margin: auto;
  display: flex;
  justify-content: center;
}

.prompt {
  margin-top: 15%;
  color: white;
}

#findRlHelp {
  display: inline;
  color: white;
  width: 90%;
  margin-left: 10px;
  margin-top: 3px;
}

.popover {
  max-width: 90%;
}

.topnav-right {
 float: right;
}

.bg-dark {
  background-color: #191919!important;
}

.dropdown {
  display: inline;
}

.dropdown-menu  {
  float: right;
  left: auto;
  right: -25%;
  list-style: none;
  padding: 0;
  margin:0 20px 0 0;
}

#dropdownMenu3 {
  padding: 0%;
  padding-left: 10px;
  position: relative;
  top: 3px;
}

#clearSearch {
  position: relative;
  right: 28px;
}

.dropdown-toggle::after {
  content: none;
}

/* Tooltip text */
.tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: black;
  color: #fff;
  text-align: center;
  padding: 5px 0;
  border-radius: 6px;
 
  /* Position the tooltip text - see examples below! */
  position: absolute;
  z-index: 1;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
  visibility: visible;
}

body {
  background-color:  #2a2a2a;
  color: #2a2a2a}

